examples/test/testpolicy15787.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15787
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key44: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value45
      podSelector:
        matchLabels:
          key26: value12
          key44: value41
          key48: value0
